samples/_failures_safe/1761350558_1739c0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f2cf87cb.c: In function ‘bfs_shortest_path’:
./samples/SAFE/__tmp_f2cf87cb.c:187:24: error: expected declaration or statement at end of input
  187 |                 struct GraphNode* neighbor = graph->edges[i]->target;
      |                        ^~~~~~~~~
./samples/SAFE/__tmp_f2cf87cb.c:187:24: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f2cf87cb.c:187:24: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f2cf87cb.c:187:24: error: expected declaration or statement at end of input
